[package]
name = "moebius-bridge"
version = "0.1.0"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2018"

[lib]
name = "moebius"
path = "src/lib.rs"

[[bin]]
name = "moebius-bridge"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.32"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
gumdrop = "0.8.0"
serde = "1.0.114"
serde_json = "1.0.57"
solana-clap-utils = "1.4.4"
solana-client = "1.4.4"
solana-sdk = "1.4.4"
thiserror = "1.0.20"
tokio = { version = "0.2.22", features = ["macros"] }

# Solana program
moebius_program = { package = "moebius", version = "0.1.0", path = "../solana/moebius/program", features = ["no-entrypoint"] }

[build-dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["abigen"] }
