[package]
name = "reporter"
version = "0.1.0"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
bs58 = "0.3.1"
env_logger = "0.8.1"
ethereum-types = "0.9.2"
futures = "0.3.1"
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_warp = { git = "https://github.com/graphql-rust/juniper", features = ["subscriptions"] }
log = "0.4.8"
serde = "1.0.103"
serde_bytes = "0.11.5"
serde_derive = "1.0.103"
serde_json = "1.0.57"
solana-sdk = "1.4.4"
solana-client = "1.4.4"
thiserror = "1.0.20"
tokio = { version = "0.2.22", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
tungstenite = "0.11.1"
url = "2.1.1"
warp = "0.2.1"
rustc-hex = "2.1.0"

simple-program = { path = "../simple_program/program", features = ["no-entrypoint"] }
uniswap-program = { path = "../uniswap_oracle/program", features = ["no-entrypoint"] }
