[package]
name = "moebius-derive-impl"
version = "0.1.0"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11.4"
proc-macro2 = "1.0.18"
quote = "1.0"
syn = { version = "1.0.33", features = ["extra-traits", "full", "derive"] }
