[package]
name = "uniswap-oracle-cli"
version = "0.1.0"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
console = "0.13.0"
serde_json = "1.0.59"
solana-account-decoder = "1.4.4"
solana-clap-utils = "1.4.4"
solana-cli-config = "1.4.4"
solana-cli-output = "1.4.4"
solana-client = "1.4.4"
solana-logger = "1.4.4"
solana-remote-wallet = "1.4.4"
solana-sdk = "1.4.4"

# programs
moebius = { version = "0.1.0", path = "../../moebius/program", features = [ "no-entrypoint" ] }
uniswap-program = { version = "0.1.0", path="../program", features = [ "no-entrypoint" ] }

[[bin]]
name = "uniswap-oracle"
path = "src/main.rs"
